--- a/LifeSaverSite/LifeSaverSite.csproj
+++ b/LifeSaverSite/LifeSaverSite.csproj
@@ -165,6 +165,10 @@
     <Content Include="Views\Home\Image.cshtml" />
     <Content Include="Views\Report\Index.cshtml" />
     <Content Include="Views\Home\Inventory.cshtml" />
+    <Content Include="Views\Home\DashBoard.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\Compare.cshtml" />
+    <Content Include="Views\Home\Report.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
