--- a/LifeSaverSite/LifeSaverSite.csproj
+++ b/LifeSaverSite/LifeSaverSite.csproj
@@ -132,9 +132,12 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Img\bluebox.JPG" />
     <Content Include="Content\Img\imgrep.PNG" />
+    <Content Include="Content\Img\orangebox.JPG" />
     <Content Include="Content\Img\Report A.PNG" />
     <Content Include="Content\Img\reportpic.JPG" />
+    <Content Include="Content\Img\yellowbox.JPG" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
