--- a/LifeSaverSite/LifeSaverSite.csproj
+++ b/LifeSaverSite/LifeSaverSite.csproj
@@ -134,6 +134,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Img\bluebox.JPG" />
     <Content Include="Content\Img\imgrep.PNG" />
+    <Content Include="Content\Img\Inventory_Background.jpg" />
     <Content Include="Content\Img\orangebox.JPG" />
     <Content Include="Content\Img\Report A.PNG" />
     <Content Include="Content\Img\reportpic.JPG" />
