--- a/LifeSaverSite/LifeSaverSite.csproj
+++ b/LifeSaverSite/LifeSaverSite.csproj
@@ -26,7 +26,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-    <TypeScriptToolsVersion>3.3</TypeScriptToolsVersion>
+    <TypeScriptToolsVersion>3.1</TypeScriptToolsVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -126,18 +126,15 @@
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
     <Content Include="Content\bootstrap-reboot.min.css" />
-    <Content Include="Content\bootstrap-super.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Img\bluebox.JPG" />
-    <Content Include="Content\Img\compare.JPG" />
-    <Content Include="Content\Img\ComputerKeyboard-2.jpg" />
+    <Content Include="Content\Img\Capture.JPG" />
     <Content Include="Content\Img\imgrep.PNG" />
     <Content Include="Content\Img\Inventory_Background.jpg" />
     <Content Include="Content\Img\orangebox.JPG" />
     <Content Include="Content\Img\Report A.PNG" />
     <Content Include="Content\Img\reportpic.JPG" />
-    <Content Include="Content\Img\telemetry.jpg" />
     <Content Include="Content\Img\yellowbox.JPG" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
@@ -164,8 +161,6 @@
     <Content Include="Scripts\esm\popper.js.map" />
     <Content Include="Scripts\esm\popper-utils.min.js.map" />
     <Content Include="Scripts\esm\popper-utils.js.map" />
-    <None Include="Properties\PublishProfiles\LifeSaver - FTP.pubxml" />
-    <None Include="Properties\PublishProfiles\LifeSaver - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -207,8 +202,6 @@
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\Compare.cshtml" />
     <Content Include="Views\Home\Report.cshtml" />
-    <Content Include="Views\Shared\footer.cshtml" />
-    <Content Include="Views\Shared\partial.cshtml" />
     <Content Include="Scripts\umd\popper.min.js.map" />
     <Content Include="Scripts\umd\popper.js.map" />
     <Content Include="Scripts\umd\popper-utils.min.js.map" />
