--- a/LifeSaverSite/LifeSaverSite.csproj
+++ b/LifeSaverSite/LifeSaverSite.csproj
@@ -129,6 +129,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Img\bluebox.JPG" />
+    <Content Include="Content\Img\Capture.JPG" />
     <Content Include="Content\Img\imgrep.PNG" />
     <Content Include="Content\Img\Inventory_Background.jpg" />
     <Content Include="Content\Img\orangebox.JPG" />
