--- a/LifeSaverSite/LifeSaverSite.csproj
+++ b/LifeSaverSite/LifeSaverSite.csproj
@@ -126,6 +126,7 @@
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
     <Content Include="Content\bootstrap-reboot.min.css" />
+    <Content Include="Content\bootstrap-super.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Img\bluebox.JPG" />
