--- a/LifeSaverSite/LifeSaverSite.csproj
+++ b/LifeSaverSite/LifeSaverSite.csproj
@@ -130,6 +130,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Img\bluebox.JPG" />
+    <Content Include="Content\Img\compare.JPG" />
     <Content Include="Content\Img\ComputerKeyboard-2.jpg" />
     <Content Include="Content\Img\imgrep.PNG" />
     <Content Include="Content\Img\Inventory_Background.jpg" />
