--- a/LifeSaverSite/LifeSaverSite.csproj
+++ b/LifeSaverSite/LifeSaverSite.csproj
@@ -128,7 +128,9 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Img\barchart.PNG" />
     <Content Include="Content\Img\bluebox.JPG" />
+    <Content Include="Content\Img\c-piechart.PNG" />
     <Content Include="Content\Img\ComputerKeyboard-2.jpg" />
     <Content Include="Content\Img\imgrep.PNG" />
     <Content Include="Content\Img\Inventory_Background.jpg" />
