added and edited report page picture

--- a/LifeSaverSite/LifeSaverSite.csproj
+++ b/LifeSaverSite/LifeSaverSite.csproj
@@ -136,6 +136,7 @@
     <Content Include="Content\Img\Inventory_Background.jpg" />
     <Content Include="Content\Img\orangebox.JPG" />
     <Content Include="Content\Img\Report A.PNG" />
+    <Content Include="Content\Img\reportpge.JPG" />
     <Content Include="Content\Img\reportpic.JPG" />
     <Content Include="Content\Img\yellowbox.JPG" />
     <Content Include="favicon.ico" />
