--- a/LifeSaverSite/LifeSaverSite.csproj
+++ b/LifeSaverSite/LifeSaverSite.csproj
@@ -132,8 +132,10 @@
     <Content Include="Content\Img\bluebox.JPG" />
     <Content Include="Content\Img\c-piechart.PNG" />
     <Content Include="Content\Img\ComputerKeyboard-2.jpg" />
+    <Content Include="Content\Img\dashboardpic.JPG" />
     <Content Include="Content\Img\imgrep.PNG" />
     <Content Include="Content\Img\Inventory_Background.jpg" />
+    <Content Include="Content\Img\invimage.JPG" />
     <Content Include="Content\Img\numcaseclinic.JPG" />
     <Content Include="Content\Img\numoffail.JPG" />
     <Content Include="Content\Img\orangebox.JPG" />
